@@ -1,5 +1,6 @@
 Changes in Version 0.12
   o Fixed a bug in the identification function for ml_lvm models
+  o Implemented min_sum argument for estimating Ising models on data with a minimum sum score due to selection bias. This method is further discussed in  Boot, de Ron, Haslbeck & Epskamp (in preperation). Correcting for selection bias after sum score selection in the Ising model.
 
 Changes in Version 0.11
   o Optimised lambda starting value choice
